note intermédiaire OK

--- a/index.ipynb
+++ b/index.ipynb
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Timing Prévisionnel\n",
+    "## Timing Prévisionnel\n",
     "\n",
     "   - **Calendrier des Étapes** :\n",
     "     - Détail du planning prévisionnel des différentes phases du projet\n",
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Méthodologies Utilisées et Prévisionnelles\n",
+    "## Méthodologies Utilisées et Prévisionnelles\n",
     "  - [Dépôt](https://github.com/WolfPackStatMathieu/ml-dl-cyber.git) GitHub du code source\n",
     "  \n",
     "  - **Collecte de Données** :\n",
@@ -157,34 +157,66 @@
    "metadata": {},
    "source": [
     "\n",
-    "     - Modèles de machine learning ou autres techniques analytiques envisagées\n",
-    "   - **Évaluation des Modèles** :\n",
-    "     - Métriques de performance prévues\n",
-    "     - Stratégies de validation"
+    "  - Modèles de machine learning envisagés:\n",
+    "    + régression logistique: fait et efficace à 99,6%, n'a pas révélé de requêtes malveillantes sur des données réelles issues d'une zone sécurisée.\n",
+    "    + K-means: envisagé mais sujet à la malédiction de la dimension. Les matrices issues de la tokenization sont *sparse*. Comment faire ?\n",
+    "    + SVM: pas encore tenté\n",
+    "    + Deep Learning: \n",
+    "      + un modèle CNN pour la classification de texte. Il utilise une couche d'embedding pour représenter les mots, une couche de convolution pour extraire les caractéristiques locales, une couche de pooling pour réduire la dimensionnalité et une couche dense pour effectuer la classification binaire.\n",
+    "        ```\n",
+    "        model = Sequential()\n",
+    "        model.add(Embedding(input_dim=vocab_size, output_dim=embedding_dim))\n",
+    "        model.add(Conv1D(filters=128, kernel_size=5, activation='relu'))\n",
+    "        model.add(GlobalMaxPooling1D())\n",
+    "        model.add(Dense(1, activation='sigmoid'))\n",
+    "        ```\n",
+    "\n",
+    "\n",
+    "      + Un réseau de neurones séquentiel utilisant une couche LSTM pour traiter des séquences de données et capturer des dépendances temporelles ou séquentielles. La sortie de la couche LSTM est passée à une couche dense avec une activation sigmoïde pour effectuer une classification binaire.\n",
+    "        ```\n",
+    "        model_lstm = Sequential()\n",
+    "        model_lstm.add(LSTM(64, input_shape=(1, X_train_tfidf_dense.shape[2])))\n",
+    "        model_lstm.add(Dense(1, activation='sigmoid'))\n",
+    "        ```\n",
+    "    + Détection d'anomalie avec Isolation Forest.\n",
+    "  \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5. État des Travaux\n",
-    "   - **Travaux Réalisés Jusqu’à Présent** :\n",
-    "     - Progrès réalisés\n",
-    "     - Résultats obtenus jusqu’ici\n",
+    "## État des Travaux\n",
     "   - **Difficultés Rencontrées** :\n",
     "     - Problèmes techniques ou méthodologiques\n",
+    "        + Il faudrait tenter d'autres design patterns de modèles. Mais j'ai encore du mal à me repérer dans ce que je peux utiliser dans l'analyse des requêtes http_url.\n",
+    "        + Je ne connais pas bien les techniques non supervisées comme Isolation Forest.\n",
+    "        + Je n'ai que des connaissances de base en séries temporelles, je ne me sens pas capable de faire du deep learning dessus pour l'instant.\n",
+    "        + La comparaison des modèles entre eux est très *artisanale*, à base de notebook.\n",
+    "        + La Tokenization des requêtes pourrait être améliorée.\n",
+    "        + Comment utiliser les autres *features* disponibles ? Les adresses IP, les ports, les timestamps ?\n",
+    "        + Comment prévoir une solution simple et rapide pour les analystes du SOC ?\n",
     "     - Solutions envisagées ou mises en place\n",
+    "        + Utiliser MLFlow pour mieux comparer les modèles entre eux, et choisir le meilleur à mettre à disposition.\n",
+    "        + Si possible: Utiliser Spark en mode Streaming sur les données du SIEM. Ou alors, utiliser un programme effectuant un appel à l'API du SIEM. ?\n",
+    "        + Analyser d'autres articles sur le sujet (voir bibliographie)\n",
+    "        \n",
     "   - **Travaux Restants** :\n",
     "     - Étapes à venir\n",
-    "     - Objectifs pour les prochaines semaines"
+    "         + Implémenter MLFlow\n",
+    "         + Tester différents algorithmes de ML et DL au sein de MLFlow.\n",
+    "         + Construire un outil permettant d'analyser une requête en particulier ou un lot de requêtes (Un exemple est proposé dans un des tutoriels de la plateforme Onyxia)\n",
+    "         + Documenter pour assurer une reproductibilité du projet.\n",
+    "     - Objectifs pour les prochaines semaines\n",
+    "         + Clarifier les modèles possibles, les entraîner avec recherche d'hyperparamètre sur MLFlow"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 6. Bibliographie\n",
-    "Le SOC étant une nouvelle unité, il n'y a pas eu de travaux sur le sujet en amont. J'ai axé ma recherche bibliographique autour des techniques de machine learning pour la cybersécurité, et autour des techniques de Deep Learning.\n",
+    "## Bibliographie\n",
+    "Le SOC étant une nouvelle unité de l'Insee, il n'y a pas eu de travaux sur le sujet en amont en son sein. J'ai axé ma recherche bibliographique autour des techniques de machine learning pour la cybersécurité, et autour des techniques de Deep Learning.\n",
     "\n",
     "   - **Références Utilisées** :\n",
     "     - Articles scientifiques:\n",
@@ -207,155 +239,22 @@
     "     - Outils et bibliothèques spécifiques\n",
     "         + [Splunk](https://www.splunk.com/fr_fr)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "* Articles:\n",
-    "  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 7. Conclusion\n",
-    "   - **Synthèse de l’Avancement** :\n",
-    "     - Résumé des principales réalisations\n",
-    "     - Confirmation du bon déroulement du stage\n",
-    "   - **Perspectives** :\n",
-    "     - Étapes finales du stage\n",
-    "     - Objectifs pour la phase suivante"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "### Format et Soumission\n",
-    "   - **Format du Document** :\n",
-    "     - Nommer le fichier suivant le format : « NOM_Prénom_mi_parcours »\n",
-    "   - **Modes de Soumission** :\n",
-    "     - Soumission sur Moodle\n",
-    "     - Envoi par mail à l’enseignant référent\n",
-    "\n",
-    "En suivant ce plan, vous devriez être en mesure de rédiger une note d’étape complète et structurée, respectant les exigences de votre programme de stage. Assurez-vous de respecter la longueur recommandée (2 à 3 pages) en étant concis et précis dans vos descriptions."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\n",
-    "### 2. État de l’Art\n",
-    "   - **Revue de Littérature** : Synthèse des travaux précédents, articles scientifiques, et technologies utilisées en lien avec la problématique du stage.\n",
-    "\n",
-    "Le SOC étant une nouvelle unité, il n'y a pas eu de travaux sur le sujet en amont. J'ai axé ma recherche bibliographique autour des techniques de machine learning pour la cybersécurité, et autour des techniques de Deep Learning.\n",
-    "\n",
-    "* Livres:\n",
-    "  + An introduction to statistical learning with applications in Python\n",
-    "  + Deep Learning Patterns and Practices, Andrew Ferlitsch\n",
-    "  + Deep Learning from Scratch - Building with Python from first principles, Seth Weidman\n",
-    "  + Deep Learning_ A Visual Approach -- Andrew Glassner -- Illustrated, 2021\n",
-    "  + Machine learning with Python cookbook, Kyle Gallatin & Chris Albon\n",
-    "  + Deep Learning, Ian Goodfellow\n",
-    "  + Machine Learning for cybersecurity, Emmanuel Tsukerman, (Chapter 6 Automatic Intrusion Detection)\n",
-    "  + Machine Learning for computer and Cyber Security, Principles, Algorithms, and Practices, Brij B. Gupta\n",
-    "\n",
     "* Articles:\n",
     "  + Isolation Forest, Liu, Ting, Zhou\n",
-    "  + R. Fontugne, P. Borgnat, P. Abry, K. Fukuda. \"MAWILab: Combining diverse anomaly detectors for automated anomaly labeling and performance benchmarking\". ACM CoNEXT 2010. Philadelphia, PA. December 2010. \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "   - **Technologies et Outils** : Présentation des technologies, outils, et bibliothèques couramment utilisés en data science et spécifiques au projet.\n",
-    "\n",
-    "Pour ce projet, j'utilise Python, et des notebook Jupyter, au sein d'environnement hébergés sur la plateforme Onyxia (qui met à dispositio un GPU) ou son équivalent en interne à l'Insee (qui n'en dispose pas). J'utilise les packages classiques de machine learning dont scikit-learn, et les outils associés: TfidfVectorizer, tensorflow, LogisticRegressionLSTM, XGBoost CNN, KFold GridSearchCV.\n",
-    "J'ai également commencé à utiliser l'outil MLFlow, qui est une plateforme permettant de gére le cycle de vie d'un projet de machine learning de bout en bout, notamment les étapes d'expérimentation et d'amélioration continue.\n",
-    "\n",
-    "\n",
-    "![L'approche MLOps](images/mlops.png)\n",
-    "\n",
-    "\n",
-    "### 3. Méthodologie\n",
-    "   - **Collecte de Données** : Sources des données, méthodes de collecte, et description des jeux de données utilisés.\n",
-    "\n",
-    "Les données se classent en deux catégories: les données sur lesquelles les modèles sont entraînés, et les données issues de Splunk.\n",
-    "Pour le moment, j'ai testé différents algorithmes sur un unique jeu de données que je nomme [\"Good-Bad queries\"]<https://github.com/faizann24/Fwaf-Machine-Learning-driven-Web-Application-Firewall.git>\n",
-    "\n",
-    "   - **Préparation des Données** : Techniques de nettoyage, transformation, et enrichissement des données.\n",
-    "   - **Exploration des Données** : Analyse exploratoire, visualisations, et insights préliminaires obtenus des données.\n",
-    "   - **Modélisation** : Description des modèles de machine learning ou autres techniques analytiques utilisés. Justification des choix de modèles.\n",
-    "   - **Évaluation des Modèles** : Métriques et méthodes utilisées pour évaluer la performance des modèles.\n",
-    "\n",
-    "### 4. Développement et Implémentation\n",
-    "   - **Architecture du Système** : Schéma et description de l'architecture du système ou de la solution développée.\n",
-    "   - **Pipeline de Données** : Description du pipeline de traitement des données, de l'ingestion à l'analyse.\n",
-    "   - **Déploiement** : Processus de déploiement des modèles ou solutions, environnements utilisés (local, cloud, etc.), et outils de déploiement.\n",
-    "\n",
-    "### 5. Résultats et Discussions\n",
-    "   - **Résultats Obtenus** : Présentation des résultats des analyses et des performances des modèles.\n",
-    "   - **Interprétation des Résultats** : Analyse et interprétation des résultats. Comparaison avec les attentes initiales et les benchmarks.\n",
-    "   - **Limites et Contraintes** : Discussion sur les limites rencontrées, les défis techniques, et les contraintes liées aux données ou aux outils.\n",
-    "\n",
-    "### 6. Conclusion et Perspectives\n",
-    "   - **Synthèse du Travail** : Résumé des principales réalisations et des contributions du stage.\n",
-    "   - **Perspectives d’Avenir** : Suggestions pour des travaux futurs, améliorations possibles, et nouvelles pistes de recherche ou de développement.\n",
-    "\n",
-    "### 7. Références\n",
-    "   - **Bibliographie** : Liste des ouvrages, articles, et ressources consultés pour la réalisation du projet.\n",
-    "   - **Outils et Logiciels** : Références des outils et logiciels utilisés.\n",
-    "\n",
-    "### 8. Annexes\n",
-    "   - **Code Source** : Extraits de code pertinents ou lien vers un dépôt de code.\n",
-    "   - **Documents Supplémentaires** : Diagrammes, schémas, documents techniques, etc.\n",
-    "\n",
-    "Ce plan vous fournira une structure claire et organisée pour votre note intermédiaire, couvrant tous les aspects essentiels de votre stage en data science. Chaque section peut être adaptée en fonction des spécificités de votre projet et des exigences de votre programme de master."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Introduction\n"
+    "  + R. Fontugne, P. Borgnat, P. Abry, K. Fukuda. \"MAWILab: Combining diverse anomaly detectors for automated anomaly labeling and performance benchmarking\". ACM CoNEXT 2010. Philadelphia, PA. December 2010.\n",
+    "  + Levi Junior, David Macedo, Adriano Lorena Inácio de Oliveira, Cleber Zanchettin,  \"Detecting Malicious HTTP Requests Without Log Parser Using RequestBERTBiLSTM\", 2022\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on data up to and including 1971, eruptions on La Palma happen every 79.8 years on average."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Data & Methods {#sec-data-methods}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Conclusion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## References {.unnumbered}\n",
+    "## Conclusion\n",
     "\n",
-    ":::{#refs}\n",
-    "\n",
-    ":::"
+    "- Résumé des principales réalisations:\n",
+    "   - premières analyses de logs réalisées\n",
+    "   - plusieurs modèles testés\n",
+    "- Le stage se déroule bien. J'aimerais avoir un peu plus d'appui technique dans le choix des modèles."
    ]
   }
  ],
