--- a/index.ipynb
+++ b/index.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "---\n",
     "title: Note intermédiaire rapport de stage\n",
-    "\n",
+    "format:\n",
+    "  pdf:\n",
+    "    toc: true\n",
+    "    number-sections: true\n",
+    "    colorlinks: true\n",
     "author:\n",
     "  - name: Mathieu Thomassin\n",
     "    orcid: 0000-0002-0760-5497\n",
@@ -83,7 +87,7 @@
     "\n",
     "   - **Calendrier des Étapes** :\n",
     "     - Détail du planning prévisionnel des différentes phases du projet\n",
-    "     ![Gantt](images/gantt_prevision.png)\n",
+    "![Gantt](images/gantt_prevision.png)\n",
     "     - Échéances importantes et jalons:\n",
     "        - note intermédiaire (1er juin)\n",
     "        - être prêt pour tester pendant les élections européennes (8 et 9 juin)\n",
@@ -92,7 +96,7 @@
     "        \n",
     "   - **Avancement Actuel** :\n",
     "     - Comparaison avec le calendrier initial:\n",
-    "        ![Avancement actuel](images/gantt_realise.png)\n",
+    "![Avancement actuel](images/gantt_realise.png)\n",
     "\n",
     "     - Retards éventuels et raisons:\n",
     "         - Les premiers tests et expérimentations ont eu lieu, cependant, j'ai préféré commencer à comprendre plus en profondeur les design patterns de deep learning ainsi que le fonctionnement de MLFlow avant de pousser davantage la comparaison des modèles et des datasets. MLFLow va permettre une bonne méthode de comparaison et de sélection des meilleurs modèles, dans la perspective d'une intégration avec une mise en production. \n",
